Fix z-index Sidebar

--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -19,3 +19,7 @@
     color: white;
 
 }
+#swipeableDrawer{
+    position: relative;
+    z-index: 5;
+}
